--- a/burraq/templates/index.html
+++ b/burraq/templates/index.html
@@ -200,11 +200,9 @@ function hideURLbar(){ window.scrollTo(0,1); } </script>
 		 <h3>Gallery</h3>
 
         <div align="center">
-            <button class="filter-button custom-buttons" data-filter="all">All Projects</button>
-
             {% for foo in folders %}
                 {% if foo %}
-                    <button class=" filter-button custom-buttons" data-filter="{{ foo.title|cut:" " }}">{{ foo.title }}</button>
+                    <button class="filter-button custom-buttons" data-filter="{{ foo.title|cut:" " }}">{{ foo.title }}</button>
                 {% endif %}
             {% endfor %}
         </div>
@@ -400,28 +398,18 @@ function hideURLbar(){ window.scrollTo(0,1); } </script>
         <script>
             $(document).ready(function(){
 
+                {% for foo in folders %}
+                    $('.{{ foo.title|cut:" "  }}').hide();
+                {% endfor %}
+                $('.{{ folders.first.title|cut:" "  }}').show();
+
+
             $(".filter-button").click(function(){
                 var value = $(this).attr('data-filter');
 
-                if(value == "all")
-                {
-                    //$('.filter').removeClass('hidden');
-                    $('.filter').show('1000');
-                }
-                else
-                {
-        //            $('.filter[filter-item="'+value+'"]').removeClass('hidden');
-        //            $(".filter").not('.filter[filter-item="'+value+'"]').addClass('hidden');
-                    $(".filter").not('.'+value).hide('3000');
-                    $('.filter').filter('.'+value).show('3000');
-
-                }
+                $(".filter").not('.'+value).hide('3000');
+                $('.filter').filter('.'+value).show('3000');
             });
-
-            if ($(".filter-button").removeClass("active")) {
-        $(this).removeClass("active");
-        }
-        $(this).addClass("active");
 
         });
         </script>
