--- a/burraq/templates/index.html
+++ b/burraq/templates/index.html
@@ -283,7 +283,7 @@ function hideURLbar(){ window.scrollTo(0,1); } </script>
 				<h4>Address</h4>
 				<ul>
 					<li><span class="glyphicon glyphicon-home" aria-hidden="true"></span>234-C PIA Main Boulevard, Johar Town, Lahore</li>
-					<li><span class="glyphicon glyphicon-envelope" aria-hidden="true"></span><a href="mailto:sohaib@burraqmarketing.com">sohaib@burraqmarketing.com</a></li>
+					<li><span class="glyphicon glyphicon-envelope" aria-hidden="true"></span><a href="mailto:sohaib@burraqmarketing.pk ">sohaib@burraqmarketing.pk</a></li>
 					<li><span class="glyphicon glyphicon-earphone" aria-hidden="true"></span> (03) 111-444-570</li>
 				</ul>
 			</div>
