--- a/burraq/templates/index.html
+++ b/burraq/templates/index.html
@@ -71,6 +71,7 @@ function hideURLbar(){ window.scrollTo(0,1); } </script>
 								<li><a href="index.html" class="scroll tabs-color"><span>Home</span></a></li>
 								<li><a href="#about" class="scroll tabs-color"><span>About</span></a></li>
 								<li><a href="#services" class="scroll tabs-color"><span>Services</span></a></li>
+                                <li><a href="#featured" class="scroll tabs-color"><span>Featured Project</span></a></li>
 								<li><a href="#gallery" class="scroll tabs-color"><span>Gallery</span></a></li>
 								<li><a href="#contact" class="scroll tabs-color"><span>Contact Us</span></a></li>
                                 <li><a href="#reach" class="scroll tabs-color"><span>Reach Us</span></a></li>
@@ -193,6 +194,34 @@ function hideURLbar(){ window.scrollTo(0,1); } </script>
 	</div>
 </div>
 <!--//services-->
+    {# featured #}
+    <div class="gallery" id="featured">
+	<div class="container">
+		 <h3>Our Featured Project</h3>
+        <div class="about-info about-info-custom">
+			<img src="{%  static 'images/featured.jpg' %}" alt="alhayat-residencia" alt="">
+			<div class="about-info2">
+				<h4>Al-Hayat Residencia</h4>
+				<p>"AL-HAYAT RESIDENCIA is the right step in the right direction. Which is going to be a state of
+                    the art luxurious apartment lifestyle by offering its residents the same level of class and
+                    convenience that the people of Lahore generally enjoy with bungalows.". </p>
+            </div>
+        </div>
+        <div class="about-info about-info-custom">
+			<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3406.0373776427978!2d74.22402645038598!3d31.3855328813232!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3919015570580251%3A0xdb8ba80e6d9e00a4!2sALHAYAT+RESIDENCIA%2C+BOOKING+OFFICE!5e0!3m2!1sen!2s!4v1535768959715" width="570" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
+			<div class="about-info2">
+				<h4>Location of Alhayat Residencia</h4>
+				<p>"The neighborhood where AL-HAYAT RESIDENCIA is located is witnessing rapid infrastructural development and massive
+                changes in the real estate landscape..". </p>
+            </div>
+        </div>
+
+                <div class="clearfix"> </div>
+                </div>
+            </div>
+
+{#    featured end #}
+
 
 <!-- gallery -->
 	<div class="gallery" id="gallery">
