--- a/burraq/templates/index.html
+++ b/burraq/templates/index.html
@@ -199,8 +199,11 @@ function hideURLbar(){ window.scrollTo(0,1); } </script>
 	<div class="container">
 		 <h3>Our Featured Project</h3>
         <div class="about-info about-info-custom">
-			<img src="{%  static 'images/featured.jpg' %}" alt="alhayat-residencia" alt="">
-			<div class="about-info2">
+{#			<img src="{%  static 'images/featured.jpg' %}" alt="alhayat-residencia" alt="">#}
+			<div class="alhayat-video-main">
+                <iframe height="315" src="https://www.youtube.com/embed/d2cN1UYI8CA" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+            </div>
+            <div class="about-info2">
 				<h4>Al-Hayat Residencia</h4>
 				<p>"AL-HAYAT RESIDENCIA is the right step in the right direction. Which is going to be a state of
                     the art luxurious apartment lifestyle by offering its residents the same level of class and
@@ -208,9 +211,11 @@ function hideURLbar(){ window.scrollTo(0,1); } </script>
             </div>
         </div>
         <div class="about-info about-info-custom">
-			<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3406.0373776427978!2d74.22402645038598!3d31.3855328813232!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3919015570580251%3A0xdb8ba80e6d9e00a4!2sALHAYAT+RESIDENCIA%2C+BOOKING+OFFICE!5e0!3m2!1sen!2s!4v1535768959715" width="570" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
-			<div class="about-info2">
-				<h4>Location of Alhayat Residencia</h4>
+            <div class="featured_location">
+                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3406.0373776427978!2d74.22402645038598!3d31.3855328813232!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3919015570580251%3A0xdb8ba80e6d9e00a4!2sALHAYAT+RESIDENCIA%2C+BOOKING+OFFICE!5e0!3m2!1sen!2s!4v1535768959715" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
+			</div>
+            <div class="about-info2">
+				<h4>Location of Al-hayat Residencia</h4>
 				<p>"The neighborhood where AL-HAYAT RESIDENCIA is located is witnessing rapid infrastructural development and massive
                 changes in the real estate landscape..". </p>
             </div>
@@ -304,7 +309,7 @@ function hideURLbar(){ window.scrollTo(0,1); } </script>
             <div class="col-md-4 agileinfo_footer_grid">
 				<h4>Our location</h4>
                 <div class="map_location">
-				    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3403.4439680276723!2d74.29274895038799!3d31.45697118129926!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x391901b60aa1fb05%3A0x992e97af0677d57!2sSK+ASSOCIATES!5e0!3m2!1sen!2s!4v1534254482795" width="300" height="300" frameborder="0" style="border:0" allowfullscreen></iframe>
+				    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3403.4439680276723!2d74.29274895038799!3d31.45697118129926!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x391901b60aa1fb05%3A0x992e97af0677d57!2sSK+ASSOCIATES!5e0!3m2!1sen!2s!4v1534254482795" height="300" frameborder="0" style="border:0" allowfullscreen></iframe>
 				</div>
                 <div class="clearfix"> </div>
 			</div>
@@ -312,7 +317,7 @@ function hideURLbar(){ window.scrollTo(0,1); } </script>
 				<h4>Address</h4>
 				<ul>
 					<li><span class="glyphicon glyphicon-home" aria-hidden="true"></span>234-C PIA Main Boulevard, Johar Town, Lahore</li>
-					<li><span class="glyphicon glyphicon-envelope" aria-hidden="true"></span><a href="mailto:sohaib@burraqmarketing.pk ">sohaib@burraqmarketing.pk</a></li>
+					<li><span class="glyphicon glyphicon-envelope" aria-hidden="true"></span><a href="mailto:info@burraqmarketing.pk ">info@burraqmarketing.pk</a></li>
 					<li><span class="glyphicon glyphicon-earphone" aria-hidden="true"></span> (03) 111-444-570</li>
 				</ul>
 			</div>
